# cppdemo

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  build-android.sh  demo.cpp
camera_calibration/: camera_calibration_formula.md  camera_calibration_visualization.html  camera_calibration_visualization.py
cmake/: igl_copy_dll.cmake  zzpkg.cmake
demo1/: CMakeLists.txt  README.md  demo1.cpp  test_comment.cpp  test_string.cpp  test_string2.cpp  test_string3.cpp  test_unicode.cpp  utf8console.h
demo10/: CMakeLists.txt  README.md  image_info.h  viewer.cpp  writer.cpp
demo11/: CMakeLists.txt  demo11.cpp  demo11_thread_display.cpp  main.cpp
demo12/: CMakeLists.txt
demo13/: CMakeLists.txt  main.cpp
demo2/: CMakeLists.txt  demo2.cpp
demo3/: CMakeLists.txt  debug_helper.h  demo3.cpp  requirements.txt  video_player.py
demo4/: CMakeLists.txt  README.md  use_foo.cpp
demo4/foo/: CMakeLists.txt  foo.cpp  foo.h
demo5/: CMakeLists.txt  main.cpp
demo6/: CMakeLists.txt  main.cpp
demo7/: CMakeLists.txt  main.cpp
demo8/: CMakeLists.txt  main.cpp
demo9/: CMakeLists.txt  README.md  main.cpp
image_viewer/: CMakeLists.txt  README.md  debugview.py  main.cpp
image_viewer/debugview_dll/: CMakeLists.txt  debugview_dll.cpp
image_viewer/gdb/: debugview.py
imgproc/: CMakeLists.txt  rgb2gray.cpp
macro/: cppstd.cpp  cxx11.h  deprecated.cpp  funcname.cpp  stringify.cpp  typedef.cpp
make_package/: README-shortcuts.md  README.md  checkout_repo.sh  create-all-shortcuts.sh  create-doc-shortcuts.ps1  create-doc-shortcuts.sh  zip_utils.sh
make_package/catch2/: .gitignore  install_catch2_2.13.10.sh
make_package/cereal/: .gitignore  install_cereal_1.3.2.sh
make_package/cli11/: .gitignore  install_CLI11_2.6.1.sh
make_package/cmake/: README.md  install_cmake-doc-4.2.1.sh
make_package/cppreference/: .gitignore  README.md  install_cppreference-doc-en.sh  install_cppreference-doc-zh.sh
make_package/eigen/: .gitignore  install_eigen-doc-3.4.0.sh  install_eigen_3.4.0.sh
make_package/ffmpeg/: build-linux-x64.sh  build-mac-aarch64.sh  build-mac-arm64.sh  checkout_ffmpeg_n7.0.3.sh
make_package/fmt/: .gitignore  build-mac-aarch64.sh  build-vs2022-x64.sh  checkout_fmt_12.1.0.sh  install_fmt_10.2.1.sh  install_fmt_11.2.0.sh  install_fmt_12.1.0.sh
make_package/ghc-filesystem/: install_ghc-filesystem_1.5.14.sh
make_package/glfw/: build-linux-x64.sh  build-mac-aarch64.sh  build-mac-arm64.sh  build-vs2022-x64.sh  checkout_glfw_3.4.sh
make_package/h264_data/: .gitignore  install-h264-data.sh
make_package/h265_data/: .gitignore  install-h265-data.sh
make_package/imgui/: checkout_imgui_1.92.5.sh
make_package/mpbase-i/: .gitignore  install_mpbase-i.sh
make_package/ncnn/: .gitignore  build-android-arm64.sh  build-android.sh  build-linux-x64.sh  build-linux.sh  build-mac-aarch64.sh  build-mac-arm64.sh  build-vs2022-x64.sh  build-vs2022.sh  checkout_ncnn_master.sh
make_package/numpy/: README.md  install_numpy-doc-2.4.sh
make_package/opencv/: .gitignore  README.md  build-android-arm64.sh  build-android.sh  build-linux-x64-static.sh  build-linux-x64.sh  build-linux.sh  build-mac-aarch64.sh  build-mac-arm64.sh  build-vs2022-x64-static.sh  build-vs2022-x64.sh  build-vs2022.sh  checkout_ocv_4.12.0.sh  install-opencv-doc.sh  install-opencv-src.sh  installOCV.sh  install_ocv_4.12.0.sh  setup_repo.sh
make_package/pystring/: .gitignore  CMakeLists.txt  build-mac-aarch64.sh  build-vs2022-x64-static.sh  checkout_pystring_1.1.4.sh  pystringConfig.cmake.in
make_package/python/: README.md  install_python-doc-3.14.sh
make_package/spdlog/: .gitignore  install_spdlog_1.16.0.sh
readlines/: readlines.cpp  text_file_reader.hpp  text_file_reader_test.cpp
readlines_c/: string_view.cpp  string_view.h  string_view.hpp  test.c  text_file_reader.cpp  text_file_reader.h
shared_memory/: README.md
shared_memory/posix/: CMakeLists.txt  reader.cpp  writer.cpp
shared_memory/windows/: CMakeLists.txt  reader.cpp  writer.cpp
string/: CMakeLists.txt  cppdemo_string.cpp  cppdemo_string.h  test_string.cpp
test_package/: CMakeLists.txt
test_package/test_catch2/: CMakeLists.txt  main.cpp
test_package/test_cereal/: CMakeLists.txt  main.cpp
test_package/test_eigen/: CMakeLists.txt
test_package/test_glfw/: CMakeLists.txt
test_package/test_imgui/: CMakeLists.txt  main.cpp
test_package/test_many_header_only/: CMakeLists.txt
test_package/test_pystring/: CMakeLists.txt  main.cpp
unsafe/: readlines.cpp
